ZONA DI GUERRA CONTINUA...